# mocking-in-cxx

./: .clang-format  .gitmodules  CMakeLists.txt  mocking_in_cxx.pptx
src/: CMakeLists.txt  Sensor.hpp  Uart.hpp  main.cpp
test/: CMakeLists.txt
test/x01-virtual/: CMakeLists.txt  Sensor.cpp  Sensor.hpp  Uart.cpp  Uart.hpp  Uart.mock.cpp
test/x02-test-virtual/: CMakeLists.txt  Sensor.test.cpp  TestVirtual.hpp  Uart.hpp  Uart.mock.hpp
test/x03-template/: CMakeLists.txt  Sensor.hpp  Sensor.test.cpp
test/x04-extern-template/: CMakeLists.txt  Sensor.cpp  Sensor.hpp  Sensor.test.cpp  Sensor.tpp  Uart.mock.hpp
test/x05-virtual-proxy/: CMakeLists.txt  ProxyMock.hpp  Sensor.hpp  Sensor.test.cpp  Uart.cpp  Uart.mock.cpp  Uart.mock.hpp  Uart.proxy.cpp
test/x06-monkey-patch/: CMakeLists.txt  Sensor.cpp  Sensor.hpp  Sensor.test.cpp  Uart.cpp  Uart.hpp
